--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,5 @@
     <string name="images_save_button">images save button</string>
     <string name="search">Search</string>
     <string name="options_view">options view</string>
-    <string name="images_grid_view_btn">images_grid_view_btn</string>
+    <string name="images_grid_view_btn">images grid view btn</string>
 </resources>
