--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -6,5 +6,5 @@
     <string name="title_notification">Notifications</string>
     <string name="title_profile">Profile</string>
     <string name="message">Message</string>
-    <string name="highgrams">HighGrams</string>
+    <string name="highgrams">Highgrams</string>
 </resources>
